"""
Enterprise Stress Testing Framework - Multi-protocol Load Testing with Chaos Engineering
"""

from __future__ import annotations
import asyncio
import aiohttp
import random
import time
import signal
from typing import Dict, List, Tuple, Optional, Any
from dataclasses import dataclass
from statistics import mean, stdev
from prometheus_client import (  # type: ignore
    start_http_server,
    Summary,
    Gauge,
    Histogram,
    Counter
)
import uvloop
import numpy as np
import pandas as pd
import json
import zlib
from grpclib.client import Channel
from aelion.protos.agent.v1 import AgentServiceStub
from kafka import KafkaProducer
from .utils.metrics import MetricsSystem

asyncio.set_event_loop_policy(uvloop.EventLoopPolicy())

# Prometheus Metrics
REQUEST_LATENCY = Histogram(
    'stress_test_request_latency_seconds',
    'Request latency distribution',
    ['protocol', 'endpoint'],
    buckets=(0.001, 0.01, 0.1, 0.5, 1, 5, 10, float('inf'))
)
ERROR_COUNTER = Counter(
    'stress_test_errors_total',
    'Total test errors',
    ['protocol', 'error_type']
)
ACTIVE_USERS = Gauge(
    'stress_test_active_users',
    'Current number of simulated active users'
)

@dataclass
class StressTestConfig:
    """Configuration for stress testing scenarios"""
    test_duration: int = 600          # Test duration in seconds
    ramp_up_time: int = 60            # Gradual user increase period
    max_users: int = 10_000           # Maximum concurrent users
    spawn_rate: int = 100             # Users added per second during ramp-up
    hold_duration: int = 300          # Time to maintain peak load
    protocol_mix: Dict[str, float] = None  # Protocol distribution
    endpoints: List[Dict] = None       # API endpoints to test
    chaos_config: Dict = None         # Chaos engineering parameters
    prometheus_port: int = 8001       # Metrics server port
    kafka_bootstrap: List[str] = None # Kafka brokers for event streaming

    def __post_init__(self):
        self.protocol_mix = self.protocol_mix or {
            'http': 0.6,
            'grpc': 0.3,
            'kafka': 0.1
        }
        self.endpoints = self.endpoints or [
            {
                "protocol": "http",
                "method": "POST",
                "url": "http://localhost:8080/api/v1/tasks",
                "payload": {"task_type": "benchmark"},
                "weight": 0.5
            }
        ]
        self.chaos_config = self.chaos_config or {
            'network_latency': {
                'probability': 0.01,
                'min_delay': 0.1,
                'max_delay': 2.0
            },
            'error_injection': {
                'probability': 0.005,
                'status_codes': [500, 503]
            }
        }

class StressTestEngine:
    """Distributed load testing orchestration system"""
    
    def __init__(self, config: StressTestConfig):
        self.config = config
        self.metrics = MetricsSystem([])
        self._session = None
        self._grpc_channels = {}
        self._kafka_producers = {}
        self._load_gen_task = None
        self._stop_signal = asyncio.Event()
        self._user_count = 0
        self._test_start = 0
        
        # State management
        self._stats = {
            'total_requests': 0,
            'errors': defaultdict(int),
            'latencies': []
        }
        
        # Distributed coordination
        self._redis = None  # Would connect to Redis cluster in real impl
        
    async def start(self):
        """Start the stress test execution"""
        # Start metrics server
        start_http_server(self.config.prometheus_port)
        
        # Initialize protocol clients
        await self._init_clients()
        
        # Register signal handlers
        loop = asyncio.get_running_loop()
        loop.add_signal_handler(
            signal.SIGTERM, 
            lambda: self._stop_signal.set()
        )
        
        # Execute test phases
        self._test_start = time.time()
        phases = [
            ('ramp_up', self.config.ramp_up_time),
            ('hold', self.config.hold_duration),
            ('ramp_down', self.config.ramp_up_time)
        ]
        
        for phase_name, duration in phases:
            if self._stop_signal.is_set():
                break
            await getattr(self, f'run_{phase_name}_phase')(duration)
            
        await self.generate_report()
        
    async def _init_clients(self):
        """Initialize protocol-specific client connections"""
        # HTTP client
        self._session = aiohttp.ClientSession(
            connector=aiohttp.TCPConnector(limit=0),
            timeout=aiohttp.ClientTimeout(total=30)
        )
        
        # gRPC channels
        for endpoint in filter(
            lambda e: e['protocol'] == 'grpc', 
            self.config.endpoints
        ):
            self._grpc_channels[endpoint['url']] = Channel(
                host=endpoint['url'].split(':')[0],
                port=int(endpoint['url'].split(':')[1]),
                loop=asyncio.get_event_loop()
            )
            
        # Kafka producers
        if self.config.kafka_bootstrap:
            self._kafka_producers = KafkaProducer(
                bootstrap_servers=self.config.kafka_bootstrap,
                compression_type='snappy',
                acks='all',
                retries=10,
                max_in_flight_requests_per_connection=5
            )
            
    async def run_ramp_up_phase(self, duration: int):
        """Gradually increase load to target level"""
        start_users = self._user_count
        target_users = self.config.max_users
        step = (target_users - start_users) / duration
        
        start_time = time.time()
        while time.time() - start_time < duration:
            if self._stop_signal.is_set():
                return
                
            new_users = min(
                int(start_users + (time.time() - start_time) * step),
                target_users
            )
            await self.adjust_load(new_users)
            await asyncio.sleep(1)
            
    async def run_hold_phase(self, duration: int):
        """Maintain peak load for sustained period"""
        start_time = time.time()
        while time.time() - start_time < duration:
            if self._stop_signal.is_set():
                return
            await self.maintain_load()
            await asyncio.sleep(5)
            
    async def run_ramp_down_phase(self, duration: int):
        """Gradually decrease load to zero"""
        start_users = self._user_count
        step = start_users / duration
        
        start_time = time.time()
        while time.time() - start_time < duration:
            if self._stop_signal.is_set():
                return
                
            target_users = max(
                int(start_users - (time.time() - start_time) * step),
                0
            )
            await self.adjust_load(target_users)
            await asyncio.sleep(1)
            
        await self.adjust_load(0)
        
    async def adjust_load(self, target_users: int):
        """Adjust number of concurrent users"""
        delta = target_users - self._user_count
        if delta > 0:
            await self._add_users(delta)
        elif delta < 0:
            await self._remove_users(-delta)
            
        ACTIVE_USERS.set(self._user_count)
        
    async def _add_users(self, count: int):
        """Spawn new virtual users"""
        tasks = []
        for _ in range(count):
            task = asyncio.create_task(self.virtual_user_loop())
            tasks.append(task)
            self._user_count += 1
            
        await asyncio.gather(*tasks)
        
    async def _remove_users(self, count: int):
        """Gracefully terminate virtual users"""
        # Implementation would track and cancel specific user tasks
        self._user_count = max(self._user_count - count, 0)
        
    async def virtual_user_loop(self):
        """Simulate individual user behavior"""
        while not self._stop_signal.is_set():
            endpoint = self._select_endpoint()
            protocol = endpoint['protocol']
            start_time = time.time()
            
            try:
                # Apply chaos engineering effects
                await self._apply_chaos_effects(protocol)
                
                # Execute protocol-specific request
                if protocol == 'http':
                    response = await self._execute_http_request(endpoint)
                elif protocol == 'grpc':
                    response = await self._execute_grpc_request(endpoint)
                elif protocol == 'kafka':
                    response = await self._execute_kafka_request(endpoint)
                    
                latency = time.time() - start_time
                
                # Record metrics
                REQUEST_LATENCY.labels(
                    protocol=protocol,
                    endpoint=endpoint['url']
                ).observe(latency)
                self._stats['latencies'].append(latency)
                self._stats['total_requests'] += 1
                
            except Exception as e:
                error_type = type(e).__name__
                ERROR_COUNTER.labels(
                    protocol=protocol,
                    error_type=error_type
                ).inc()
                self._stats['errors'][error_type] += 1
                
            await asyncio.sleep(self._think_time())
            
    def _select_endpoint(self) -> Dict:
        """Select endpoint based on weighted distribution"""
        total_weight = sum(e['weight'] for e in self.config.endpoints)
        r = random.uniform(0, total_weight)
        current = 0
        for endpoint in self.config.endpoints:
            if current + endpoint['weight'] >= r:
                return endpoint
            current += endpoint['weight']
        return self.config.endpoints[0]
        
    async def _apply_chaos_effects(self, protocol: str):
        """Inject artificial failures and delays"""
        chaos = self.config.chaos_config
        
        # Network latency injection
        if random.random() < chaos['network_latency']['probability']:
            delay = random.uniform(
                chaos['network_latency']['min_delay'],
                chaos['network_latency']['max_delay']
            )
            await asyncio.sleep(delay)
            
        # Error injection
        if random.random() < chaos['error_injection']['probability']:
            raise aiohttp.ClientError(
                f"Artificial {random.choice(chaos['error_injection']['status_codes'])} error"
            )
            
    async def _execute_http_request(self, endpoint: Dict):
        """Execute HTTP request with error handling"""
        async with self._session.request(
            method=endpoint['method'],
            url=endpoint['url'],
            json=endpoint.get('payload'),
            headers=endpoint.get('headers')
        ) as response:
            if response.status >= 400:
                raise aiohttp.ClientResponseError(
                    response.request_info,
                    response.history,
                    status=response.status
                )
            return await response.json()
            
    async def _execute_grpc_request(self, endpoint: Dict):
        """Execute gRPC request with retry logic"""
        stub = AgentServiceStub(
            self._grpc_channels[endpoint['url']]
        )
        return await stub.ProcessTask(
            endpoint.get('payload'),
            timeout=30
        )
        
    async def _execute_kafka_request(self, endpoint: Dict):
        """Produce Kafka message with delivery guarantees"""
        future = self._kafka_producers.send(
            endpoint['topic'],
            value=json.dumps(endpoint['payload']).encode()
        )
        return await future.get(timeout=10)
        
    def _think_time(self) -> float:
        """Simulate user think time between actions"""
        return random.expovariate(1/1.5)  # Mean 1.5 seconds
        
    async def maintain_load(self):
        """Maintain current user count with health checks"""
        # Implementation would include auto-scaling based on error rates
        pass
        
    async def generate_report(self):
        """Generate detailed test report with statistics"""
        duration = time.time() - self._test_start
        stats = self._stats.copy()
        stats['duration'] = duration
        stats['throughput'] = stats['total_requests'] / duration
        stats['latency_dist'] = {
            'mean': np.mean(stats['latencies']),
            'std': np.std(stats['latencies']),
            'p50': np.percentile(stats['latencies'], 50),
            'p95': np.percentile(stats['latencies'], 95),
            'p99': np.percentile(stats['latencies'], 99)
        }
        
        report = {
            'summary': stats,
            'errors': dict(stats['errors']),
            'config': self.config.__dict__,
            'timestamp': time.time()
        }
        
        with open(f"stress_report_{int(time.time())}.json", 'w') as f:
            json.dump(report, f, indent=2)
            
        return report
        
    async def __aenter__(self):
        return self
        
    async def __aexit__(self, exc_type, exc, tb):
        await self._cleanup()
        
    async def _cleanup(self):
        """Release all resources"""
        if self._session:
            await self._session.close()
            
        for channel in self._grpc_channels.values():
            channel.close()
            
        if self._kafka_producers:
            self._kafka_producers.close()
            
        if self._redis:
            await self._redis.close()

# Example Execution
if __name__ == "__main__":
    config = StressTestConfig(
        max_users=2000,
        endpoints=[
            {
                "protocol": "http",
                "method": "GET",
                "url": "http://localhost:8080/api/v1/status",
                "weight": 0.3
            },
            {
                "protocol": "grpc",
                "method": "ProcessTask",
                "url": "localhost:50051",
                "payload": {"task_id": "stress_test"},
                "weight": 0.7
            }
        ],
        chaos_config={
            'network_latency': {
                'probability': 0.02,
                'min_delay': 0.5,
                'max_delay': 3.0
            },
            'error_injection': {
                'probability': 0.01,
                'status_codes': [503]
            }
        }
    )
    
    async def main():
        async with StressTestEngine(config) as engine:
            await engine.start()
            
    asyncio.run(main())
